--- a/meals/templates/payments/student_payment_form.html
+++ b/meals/templates/payments/student_payment_form.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="form-group">
-        <label for="id_prev_month_balance">Công nợ tháng trước</label>
+        <label for="id_prev_month_balance">Tiền tháng trước</label>
         {{ form.prev_month_balance }}
     </div>
     <div class="form-group">
