--- a/meals/templates/meals/bulk_meal_form.html
+++ b/meals/templates/meals/bulk_meal_form.html
@@ -6,7 +6,7 @@
 
 <h2 class="mb-4">{{ title }}</h2>
 <div class="mb-3 text-end">
-  <a href="{% url 'meals:statistics' %}" class="btn btn-secondary">
+  <a href="{% url 'meals:statistics' %}?from=bulk" class="btn btn-secondary">
     📊 Thống kê
   </a>
 </div>
